--- a/src/app/views/footer/footer.component.html
+++ b/src/app/views/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-dark text-white mt-5">
+<footer class="text-white mt-5">
   <div class="container">
     <div class="row py-4">
       <!-- Sección de Información de la Empresa -->
@@ -31,7 +31,7 @@
       </div>
     </div>
   </div>
-  <div class="bg-secondary text-center py-3">
+  <div class="text-center py-3 derechos">
     <small>&copy; 2024 IRAERO. Todos los derechos reservados.</small>
   </div>
 </footer>
