--- a/src/app/views/g-user/g-user.component.html
+++ b/src/app/views/g-user/g-user.component.html
@@ -33,7 +33,7 @@
                 <th>Dirección</th>
                 <th>Teléfono</th>
                 <th>Email</th>
-                <th>Acciones</th> <!-- Encabezado para acciones -->
+                <th>Acciones</th> 
               </tr>
             </thead>
             <tbody>
