--- a/src/app/views/g-vuelos/g-vuelos.component.html
+++ b/src/app/views/g-vuelos/g-vuelos.component.html
@@ -1,70 +1,65 @@
 <app-g-header></app-g-header>
 <div class="container">
-    <h1>Gestión de vuelos</h1>
-    <div class="row">
-      <div class="col-md-6">
-        <div class="input-group mb-3">
-          <input type="text" class="form-control" placeholder="Buscar vuelos..." aria-label="Search flights" aria-describedby="basic-addon2">
-          <div class="input-group-append">
-            <button class="btn btn-outline-secondary" type="button"><i class="fas fa-search"></i></button>
-          </div>
+  <h1>Gestión de vuelos</h1>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Buscar por N° de vuelo o ciudad..." aria-label="Search flights" aria-describedby="basic-addon2" [(ngModel)]="searchTerm">
+        <div class="input-group-append">
+          <button class="btn btn-outline-secondary" type="button"><i class="fas fa-search"></i></button>
         </div>
       </div>
-      <div class="col-md-6">
-        <button class="btn btn-primary btn-gradient" (click)="openAddVueloModal()"><i class="fas fa-plus "></i> Añadir vuelo</button>
-      </div>
     </div>
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">N° de vuelo</th>
-          <th scope="col">Partida</th>
-          <th scope="col">Destino</th>
-          <th scope="col">Fecha de Salida</th>
-          <th scope="col">Hora de Salida</th>
-          <th scope="col">Hora de Llegada</th>
-          <th scope="col">Duración</th>
-          <th scope="col">Asientos</th>
-          <th scope="col">Estado</th>
-          <th scope="col">Precio</th>
-          <th scope="col">Opciones</th>
-        </tr>
-      </thead>
-      <tbody>
-        <ng-container *ngIf="vuelo.length > 0; else noVuelo">
-          <ng-container *ngFor="let vuelos of vuelo">
-            <tr>
-              <td>{{vuelos.numeroVuelo}}</td>
-              <td>{{getAeropuertoNombre(vuelos.aeropuertoOrigenId)}}</td>
-              <td>{{getAeropuertoNombre(vuelos.aeropuertoLlegadaId)}}</td>
-              <td>{{vuelos.fechaSalida | date: 'dd/MM/yyyy'}}</td>
-              <td>{{vuelos.horaSalida}}</td>
-              <td>{{vuelos.horaLlegada}}</td>
-              <td>{{vuelos.duracion}} min</td>
-              <td>{{vuelos.asientosDisponibles}}</td>
-              <td>{{vuelos.estado}}</td>
-              <td>S/. {{vuelos.precio}}</td>
-              <td>
-                <a [routerLink]="['/g-boletos']" class="btn btn-sm btn-info" target="_blank">
-                  <i class="fas fa-eye"></i>
-                </a>
-                <button class="btn btn-sm btn-warning">
-                  <i class="fas fa-edit"></i>
-                </button>
-                <button class="btn btn-sm btn-danger" (click)="deleteVuelos(vuelos.id)">
-                  <i class="fas fa-trash"></i>
-                </button>
-              </td>
-            </tr>
-          </ng-container>
-        </ng-container>
-        <ng-template #noVuelo>
+    <div class="col-md-6 d-flex justify-content-end">
+      <button class="btn btn-primary btn-gradient me-2" (click)="openAddVueloModal()"><i class="fas fa-plus"></i> Añadir vuelo</button>
+      <a target="_blank" [routerLink]="['/g-boletos']" class="btn btn-primary btn-gradient"><i class="fas fa-ticket"></i> Ver boletos</a>
+    </div>
+  </div>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">N° de vuelo</th>
+        <th scope="col">Partida</th>
+        <th scope="col">Destino</th>
+        <th scope="col">Fecha de Salida</th>
+        <th scope="col">Hora de Salida</th>
+        <th scope="col">Hora de Llegada</th>
+        <th scope="col">Duración</th>
+        <th scope="col">Asientos</th>
+        <th scope="col">Estado</th>
+        <th scope="col">Precio</th>
+        <th scope="col">Opciones</th>
+      </tr>
+    </thead>
+    <tbody>
+      <ng-container *ngIf="filteredVuelos.length > 0; else noVuelo">
+        <ng-container *ngFor="let vuelo of filteredVuelos">
           <tr>
-            <td colspan="6" class="text-center">No se encontraron vuelos</td>
+            <td>{{vuelo.numeroVuelo}}</td>
+            <td>{{getAeropuertoNombre(vuelo.aeropuertoOrigenId)}}</td>
+            <td>{{getAeropuertoNombre(vuelo.aeropuertoLlegadaId)}}</td>
+            <td>{{vuelo.fechaSalida | date: 'dd/MM/yyyy'}}</td>
+            <td>{{vuelo.horaSalida}}</td>
+            <td>{{vuelo.horaLlegada}}</td>
+            <td>{{vuelo.duracion}} min</td>
+            <td>{{vuelo.asientosDisponibles}}</td>
+            <td>{{vuelo.estado}}</td>
+            <td>S/. {{vuelo.precio}}</td>
+            <td>
+              <button class="btn btn-sm btn-danger" (click)="deleteVuelos(vuelo.id)">
+                <i class="fas fa-trash"></i>
+              </button>
+            </td>
           </tr>
-        </ng-template>
-      </tbody>
-    </table>
+        </ng-container>
+      </ng-container>
+      <ng-template #noVuelo>
+        <tr>
+          <td colspan="11" class="text-center">No se encontraron vuelos</td>
+        </tr>
+      </ng-template>
+    </tbody>
+  </table>
 </div>
 
 <!-- Modal para añadir vuelo -->
@@ -104,7 +99,7 @@
           </div>
           <div class="mb-3">
             <label for="asientosDisponibles" class="form-label">Asientos Disponibles</label>
-            <input type="number" class="form-control" id="asientosDisponibles" [(ngModel)]="nuevoVuelo.asientosDisponibles" name="asientosDisponibles" required>
+            <label class="form-control" >60</label>
           </div>
           <div class="mb-3">
             <label for="precio" class="form-label">Precio</label>
